Wed Jun 27 11:51:10 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_wrdb.cc: Remove bogus comment.

Wed Jun 27 04:12:56 BST 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_cursor.h: Make FlintCursor::after_end() const.

Tue Jun 26 22:31:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* tests/api_wrdb.cc: Add test_spell3(), which tests spelling
	  correction with multi databases, and the results of the iterator
	  from Database::spellings_begin() with single and multi databases.

Tue Jun 26 20:51:13 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/omtermlistiterator.cc: Handle pruning, so that multi-database
	  spelling word iterators work.  Pruning should arguably always
	  have been handled, but it's never been possible for the TermList
	  passed to TermIterator to prune before, so it's not been an
	  issue.

Tue Jun 26 20:50:06 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_spellingwordslist.h: Don't bother testing
	  whether we found an entry which was exactly "W" - if we do, the
	  database is corrupt, but the best recovery strategy would just be
	  to continue at the next matching entry.

Tue Jun 26 20:26:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* api/omdatabase.cc: Remove mistaken skip_to("W") - should be done
	  by open_spelling_wordlist() rather than here.
	* backends/flint/flint_spellingwordslist.h: Only call
	  cursor->prev() if find_entry("W") finds an entry.

Tue Jun 26 17:46:27 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* backends/flint/flint_alltermslist.cc,
	  backends/flint/flint_spellingwordslist.cc,
	  backends/flint/flint_synonym.cc: Remove calls to abort() which
	  are followed immediately by an Assert() which checks the same
	  condition.

Tue Jun 26 17:26:02 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* include/xapian/database.h: Add spellings_begin() and
	  spellings_end(), to iterate through the spelling correction