@@ -1,3 +1,9 @@
+Wed Jun 27 12:09:34 BST 2007  Olly Betts <olly@survex.com>
+
+	* backends/flint/flint_spelling.cc: Fix PrefixCompressedStringItor to
+	  not ignore the last entry.
+	* tests/api_wrdb.cc: Regression test (spell4).
+
 Wed Jun 27 11:51:10 BST 2007  Olly Betts <olly@survex.com>
 
 	* tests/api_wrdb.cc: Remove bogus comment.
